# gaitech_edu

./: .project  CMakeLists.txt  README.md  package.xml  wtfWALL.sdf
gaitech_edu/: CMakeLists.txt  README.md
gaitech_edu/src/maps/: Lmap.pgm  Lmap.yaml
gaitech_edu/src/turtlebot/navigation/map_navigation/scripts/: control.py
rviz/: majorprojectconfig.rviz
src/launch/: actual_turtlebot.launch  gazebo_turtlebot.launch  map_navigation_stage_psu.launch  turtlebot_stage_psu.launch
src/maps/: mappedActual.pgm  mappedActual.yaml  mep.pgm  mep.yaml
src/maps/FinalProjectMap/: model.config
src/maps/stage/: Lmap.world  map.world  mep.world  mep.world~
src/scripts/: control.py  map_navigation.py
src/turtlebot/navigation/map_navigation/: map_navigation.cpp  map_navigation.cpp~  map_navigation.py
src/turtlebot/navigation/map_navigation/launch/: map.launch  map_navigation_stage_psu.launch  map_navigation_stage_psu.launch~  turtlebot_stage_psu.launch  turtlebot_stage_psu.launch~
src/turtlebot/navigation/map_navigation/scripts/: control.py  map_navigation.py
